--- a/src/watershedSegFrame.form
+++ b/src/watershedSegFrame.form
@@ -8,7 +8,11 @@
     </Component>
   </NonVisualComponents>
   <Properties>
-    <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="defaultCloseOperation" type="int" value="2"/>
+    <Property name="title" type="java.lang.String" value="Watershed Segmentation"/>
+    <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+      <Dimension value="[850, 600]"/>
+    </Property>
     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[850, 600]"/>
     </Property>
@@ -56,7 +60,7 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="20" y="390" width="-1" height="-1"/>
+          <AbsoluteConstraints x="20" y="390" width="80" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -72,7 +76,7 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="20" y="420" width="-1" height="-1"/>
+          <AbsoluteConstraints x="20" y="420" width="80" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -123,7 +127,7 @@
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="320" y="310" width="100" height="-1"/>
+          <AbsoluteConstraints x="290" y="310" width="130" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -189,7 +193,7 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="180" y="430" width="430" height="-1"/>
+          <AbsoluteConstraints x="180" y="430" width="430" height="50"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -199,7 +203,7 @@
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="290" y="400" width="130" height="-1"/>
+          <AbsoluteConstraints x="270" y="400" width="150" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -209,7 +213,7 @@
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="420" y="400" width="50" height="-1"/>
+          <AbsoluteConstraints x="420" y="400" width="50" height="20"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -219,7 +223,7 @@
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="300" y="480" width="100" height="-1"/>
+          <AbsoluteConstraints x="290" y="490" width="100" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -235,7 +239,7 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="420" y="480" width="-1" height="-1"/>
+          <AbsoluteConstraints x="420" y="490" width="80" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -251,7 +255,7 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="540" y="480" width="-1" height="-1"/>
+          <AbsoluteConstraints x="540" y="490" width="100" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
