--- a/src/MainSegFrame.form
+++ b/src/MainSegFrame.form
@@ -38,6 +38,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Exit"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ExitActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
@@ -78,11 +81,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="About"/>
           </Properties>
-        </Menu>
-        <Menu class="javax.swing.JMenu" name="Help">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="Help"/>
-          </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="AboutMouseClicked"/>
+          </Events>
         </Menu>
       </SubComponents>
     </Menu>
